--- a/booking.html
+++ b/booking.html
@@ -150,8 +150,8 @@
                 </div> -->
                 <div class="col-md-6 bg-dark d-flex align-items-center">
                     <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>
-                        <h1 class="text-white mb-4">Book A Table Online</h1>
+                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">Try our Seeds Today!</h5>
+                        <h1 class="text-white mb-4">Have a query? Contact us!</h1>
                         <form id="reservationForm">
                             <div class="row g-3">
                                 <div class="col-md-6">
@@ -262,14 +262,14 @@
                     &copy; <a class="border-bottom" href="#">Madhu Agri Seeds</a>, All Right Reserved.
                     Designed By <a class="border-bottom" href="https://lifeboat.co.in">Lifeboat Technologies</a>
                 </div>
-                <div class="col-md-6 text-center text-md-end">
+                <!-- <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
                         <a href="">Home</a>
                         <a href="">Cookies</a>
                         <a href="">Help</a>
                         <a href="">FQAs</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
