--- a/contact.html
+++ b/contact.html
@@ -248,14 +248,14 @@
                         &copy; <a class="border-bottom" href="#">Madhu Agri Seeds</a>, All Right Reserved.
                         Designed By <a class="border-bottom" href="https://lifeboat.co.in">Lifeboat Technologies</a>
                     </div>
-                    <div class="col-md-6 text-center text-md-end">
+                    <!-- <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
                             <a href="">Home</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
