--- a/team.html
+++ b/team.html
@@ -235,7 +235,7 @@
                 </p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i> 
  
-                  .+91 9406300009 or +91 7489090009</p>
+                  +91 9406300009 or +91 7489090009</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>hello@madhuseeds.in
                 </p>
                 <div class="d-flex pt-2">
@@ -267,12 +267,12 @@
                     Designed By <a class="border-bottom" href="https://lifeboat.co.in">Lifeboat Technologies</a>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <div class="footer-menu">
+                    <!-- <div class="footer-menu">
                         <a href="">Home</a>
                         <a href="">Cookies</a>
                         <a href="">Help</a>
                         <a href="">FQAs</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
