content change done

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="service.html" class="nav-item nav-link">Why Us?</a>
                         <a href="menu.html" class="nav-item nav-link">Products</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -71,7 +71,7 @@
                         </div>
                         <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
-                    <a href="" class="btn btn-primary py-2 px-4">Contact Us</a>
+                    <!-- <a href="" class="btn btn-primary py-2 px-4">Contact Us</a> -->
                 </div>
             </nav>
 
@@ -102,16 +102,16 @@
                     <div class="col-12">
                         <div class="row gy-4">
                             <div class="col-md-4">
-                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Booking</h5>
-                                <p><i class="fa fa-envelope-open text-primary me-2"></i>book@example.com</p>
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Address</h5>
+                                <p><i class="fa fa-envelope-open text-primary me-2"></i>3-206, bornapally, Huzurabad, Telangana - 505468</p>
                             </div>
                             <div class="col-md-4">
-                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">General</h5>
-                                <p><i class="fa fa-envelope-open text-primary me-2"></i>info@example.com</p>
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Email</h5>
+                                <p><i class="fa fa-envelope-open text-primary me-2"></i>hello@madhuseeds.in</p>
                             </div>
                             <div class="col-md-4">
-                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Technical</h5>
-                                <p><i class="fa fa-envelope-open text-primary me-2"></i>tech@example.com</p>
+                                <h5 class="section-title ff-secondary fw-normal text-start text-primary">Phone</h5>
+                                <p><i class="fa fa-envelope-open text-primary me-2"></i>+91 9406300009 or +91 7489090009</p>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
-                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
+                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact </a>
                     <a class="btn btn-link" href="menu.html">Products</a>
@@ -217,7 +217,7 @@
                     </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i> 
  	
-                      .+91 9406300009 or +91 7489090009</p>
+                      +91 9406300009 or +91 7489090009</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>hello@madhuseeds.in
                     </p>
                     <div class="d-flex pt-2">
@@ -228,7 +228,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
+                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening Hours</h4>
                     <h5 class="text-light fw-normal">Monday - Saturday</h5>
                     <p>9 AM to 6 PM
                     </p>
@@ -248,14 +248,7 @@
                         &copy; <a class="border-bottom" href="#">Madhu Agri Seeds</a>, All Right Reserved.
                         Designed By <a class="border-bottom" href="https://lifeboat.co.in">Lifeboat Technologies</a>
                     </div>
-                    <!-- <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="">Home</a>
-                            <a href="">Cookies</a>
-                            <a href="">Help</a>
-                            <a href="">FQAs</a>
-                        </div>
-                    </div> -->
+                   
                 </div>
             </div>
         </div>
