--- a/testimonial.html
+++ b/testimonial.html
@@ -59,7 +59,7 @@
                     <div class="navbar-nav ms-auto py-0 pe-4">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="service.html" class="nav-item nav-link">Why Us?</a>
                         <a href="menu.html" class="nav-item nav-link">Products</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
@@ -71,7 +71,7 @@
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="" class="btn btn-primary py-2 px-4">Contact Us</a>
+                    <!-- <a href="" class="btn btn-primary py-2 px-4">Contact Us</a> -->
                 </div>
             </nav>
 
@@ -155,7 +155,7 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
-                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
+                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact </a>
                     <a class="btn btn-link" href="menu.html">Products</a>
@@ -168,7 +168,7 @@
                     </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i> 
  	
-                      .+91 9406300009 or +91 7489090009</p>
+                      +91 9406300009 or +91 7489090009</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>hello@madhuseeds.in
                     </p>
                     <div class="d-flex pt-2">
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
+                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening Hours</h4>
                     <h5 class="text-light fw-normal">Monday - Saturday</h5>
                     <p>9 AM to 6 PM
                     </p>
